fix(unit-test): unit test case fixes

--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,7 @@
               "zone.js",
               "zone.js/testing"
             ],
+            "karmaConfig": "karma.conf.js",
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
