fix(unit-test): unit test case fixes

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,6 @@ steps:
   displayName: Unit Test 
 
 - script: |
+    npm install -g @angular/cli
     ng build --prod
   displayName: 'build project'
